Remove firstname and lastname from user
